# iris-veloquarantineremove-module

./: Makefile  README.md  setup.cfg  setup.py
iris_veloquarantineremove_module/: IrisVeloquarantineremoveConfig.py  IrisVeloquarantineremoveInterface.py  __init__.py
iris_veloquarantineremove_module/veloquarantineremove_handler/: veloquarantineremove_handler.py
